# softarr

./: .dockerignore  .env_dev  .gitignore  .mise.toml  .ruff.toml  CHANGELOG.md  Dockerfile  LEGAL_DISCLAIMER.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/scripts/: bump_version.py  detect_bump_type.py  update_changelog.py
.github/workflows/: ci.yml  docker-publish.yml
data/seed/: example_releases.json  software_seed.json
docker/: entrypoint.sh
locales/: de.json
migrations/: env.py
scripts/: commit.sh  version_bump.sh
src/softarr/: main.py  version.py
src/softarr/adapters/: base.py  github.py  torznab.py  usenet.py
src/softarr/analysis/: antipiracy.py  archive.py  engine.py  hash.py  signature.py  signature_verifier.py  suspicious.py
src/softarr/auth/: dependencies.py  passwords.py  routes.py  service.py  sessions.py  totp.py
src/softarr/cli/: init.py
src/softarr/core/: config.py  database.py  i18n.py  ini_settings.py  logging.py
src/softarr/data/: opensource_catalogue.py
src/softarr/integrations/: download_client.py  qbittorrent.py  (+1 more)
tests/integration/: test_2fa_setup.py  test_cli_init.py  test_indexers.py  test_workflow.py
tests/unit/: test_adapters.py  test_ai_service.py  test_analysis.py  test_antipiracy.py  test_app_version.py  test_arr_features.py  test_audit_service.py  test_auth.py  test_auth_login.py  test_backup_service.py  test_clamav.py  test_contributor_service.py  test_detect_bump_type.py  test_download_client.py  test_hash_sources.py  test_i18n.py  test_ini_settings.py  test_ini_settings_indexer.py  test_metrics.py  test_notification_service.py  test_opensource_catalogue.py  test_password_policy.py  test_phase0_features.py  test_phase4_analysis.py  test_phase5_automation.py  test_push_service.py  test_qbittorrent.py  test_rbac.py  test_release_compare.py  test_release_rules.py  test_release_service.py  test_sabnzbd.py  test_search_filter_service.py  test_security.py  test_security_presets.py  test_sessions.py  test_software_service.py  test_torznab_adapter.py  test_totp.py  test_trust_service.py  (+5 more)
(+86 files in other folders)
